--- a/www/docker/hosts/blank-host.conf
+++ b/www/docker/hosts/blank-host.conf
@@ -1,9 +1,9 @@
 server {
     index index.php;
-    server_name blank.front;
+    server_name blank.dev;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/blank;
+    root /var/www/web;
 
     location ~ \.php$ {
         try_files $uri =404;
